--- a/Нова папка/index.html
+++ b/Нова папка/index.html
@@ -185,14 +185,14 @@
 <section id="intro" data-aos="fade-up">
   <h2>Въведение</h2>
   <p>Фреймът е формална структура, вдъхновена от човешкото мислене, която комбинира логическа строгост със семантична гъвкавост. Той намира приложение в много области на изкуствения интелект.</p>
-  <img src="C:\Users\velik\Desktop\Нова папка\images\ai_image.jpg" alt="AI Illustration">
+  <img src="ai_image.jpg" alt="AI Illustration">
 </section>
 
 <!-- Структура на фрейма -->
 <section id="structure" data-aos="fade-up">
   <h2>Структура на фрейма</h2>
   <p>Всеки фрейм съдържа слотове с данни, стойности по подразбиране и връзки към други фрейми. Те позволяват богато представяне на знания.</p>
-  <img src="C:\Users\velik\Desktop\Нова папка\images\framestrc.jpg" alt="Frame Structure">
+  <img src="framestrc.jpg" alt="Frame Structure">
 </section>
 
 <!-- Приложения на фреймите -->
@@ -204,14 +204,14 @@
     <li>Когнитивно моделиране</li>
     <li>Роботика и планиране</li>
   </ul>
-  <img src="C:\Users\velik\Desktop\Нова папка\images\nlp-important-use-cases.png" alt="NLP Example">
+  <img src="nlp-important-use-cases.png" alt="NLP Example">
 </section>
 
 <!-- Сравнение с други методи -->
 <section id="comparison" data-aos="fade-up">
   <h2>Сравнение с други методи</h2>
   <p>Фреймите предлагат добър баланс между формализъм и интуитивност. Те се отличават от продукционни правила, семантични мрежи и онтологии.</p>
-  <img src=c:\Users\velik\Downloads\compare.jpg alt="Knowledge Representation">
+  <img src="compare.jpg" alt="Knowledge Representation">
 </section>
 
 <!-- Заключение -->
