--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section id="comparison" data-aos="fade-up">
   <h2>Сравнение с други методи</h2>
   <p>Фреймите предлагат добър баланс между формализъм и интуитивност. Те се отличават от продукционни правила, семантични мрежи и онтологии.</p>
-  <img src="compare1.jpg" alt="Knowledge Representation">
+  <img src="compare1.webp" alt="Knowledge Representation">
 </section>
 
 <!-- Заключение -->
